--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body, html {
 	height: 100%;
 
 
-	font-family: "HelveticaNeue-Light";
+	font-family: "walkway_boldregular";
 	letter-spacing: -2px;
 	color: #fff;
 	font-size: 75px;
@@ -133,7 +133,7 @@ canvas {
 
 .light
 {
-	font-family: "HelveticaNeue-UltraLight";
+	font-family: "walkway_semiboldregular";
 }
 
 .icon 
@@ -203,7 +203,7 @@ canvas {
 	font-size: 20px;
 	line-height: 20px;
 	/*margin-top: 10px;*/
-	font-family: "HelveticaNeue-Light";
+	font-family: "walkway_boldregular";
 	/*padding-top: 5px;*/
 }
 .calendar-table .description {
@@ -253,4 +253,38 @@ canvas {
   font-style:   normal;
   font-weight:  200;
 }
+
+@font-face {
+	font-family: 'walkway_ultraboldregular';
+	src: url('font/Walkway_UltraBold-webfont.eot');
+	src: url('font/Walkway_UltraBold-webfont.eot?#iefix') format('embedded-opentype'),
+	url('font/Walkway_UltraBold-webfont.woff') format('woff'),
+	url('font/Walkway_UltraBold-webfont.ttf') format('truetype'),
+	url('font/Walkway_UltraBold-webfont.svg#walkway_ultraboldregular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'walkway_semiboldregular';
+	src: url('font/Walkway_SemiBold-webfont.eot');
+	src: url('font/Walkway_SemiBold-webfont.eot?#iefix') format('embedded-opentype'),
+	url('font/Walkway_SemiBold-webfont.woff') format('woff'),
+	url('font/Walkway_SemiBold-webfont.ttf') format('truetype'),
+	url('font/Walkway_SemiBold-webfont.svg#walkway_semiboldregular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'walkway_boldregular';
+	src: url('font/Walkway_Bold-webfont.eot');
+	src: url('font/Walkway_Bold-webfont.eot?#iefix') format('embedded-opentype'),
+	url('font/Walkway_Bold-webfont.woff') format('woff'),
+	url('font/Walkway_Bold-webfont.ttf') format('truetype'),
+	url('font/Walkway_Bold-webfont.svg#walkway_boldregular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 
