--- a/css/font-awesome.css
+++ b/css/font-awesome.css
@@ -33,7 +33,12 @@
   font-size: 2em;
 }
 .fa-3x {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
   font-size: 3em;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 .fa-4x {
   font-size: 4em;
