--- a/css/font-awesome.css
+++ b/css/font-awesome.css
@@ -23,6 +23,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.fa-down {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: 0.8em;
+  text-rendering: auto;
+  padding-right: 3px;
+  position: relative;
+  top: 2px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 /* makes the font 33% larger relative to the icon container */
 .fa-lg {
   font-size: 1.33333333em;
